# toolsinspection

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
src/: CMakeLists.txt  algcommon.cpp  algcommon.h  algcommon.hpp  checktoolstate.cpp  checktoolstate.h  chessmarker.cpp  chessmarker.h  inspectionmanage.cpp  inspectionmanage.h  matcher.h  matcher.hpp  toolsinspection.cpp  toolsinspection.h  toolsinspection_global.h
test/: CMakeLists.txt  inspectiontest.cpp
